--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <input type="time" id="tiempoxepisodio" name="tiempoxepisodio" class="calculominutos" min="00:01" max="03:00" value="00:01">
                 </div>
                 <label for="anoserie">AÑO Comienzo:</label>
-                <input type="number" id="anoserie" name="anoserie" class="" maxlength="4" oninput="this.value = this.value.slice(0, 4);"><br><br>
+                <input type="number" id="anoserie" name="anoserie" class="calculominutos" maxlength="4" oninput="this.value = this.value.slice(0, 4);"><br><br>
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="En Emisión" checked>
                 <label class="form-check-label" for="flexRadioDefault2">
                     En Emisión
@@ -51,7 +51,7 @@
                     Finalizado
                 </label><br>
                 <label for="anofinalizado">AÑO Finalizado:</label>
-                <input type="number" id="anofinalizado" name="anofinalizado" class="" maxlength="4" oninput="this.value = this.value.slice(0, 4);"><br>
+                <input type="number" id="anofinalizado" name="anofinalizado" class="calculominutos" maxlength="4" oninput="this.value = this.value.slice(0, 4);"><br>
 
                 <div class="formutiempo">
                     <label for="minutoserieopening">INTRO:</label>
